--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,6 @@ services:
   contactservice.api:
     environment:
      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://0.0.0.0:80
     ports:
       - "5101:80"
 
@@ -14,3 +13,10 @@ services:
         - ACCEPT_EULA=Y
       ports:
         - "5433:1433"
+
+  #webspa:
+  #  environment:
+  #    - ASPNETCORE_ENVIRONMENT=Development
+  #  ports:
+  #   - "5102:80"
+
