--- a/WebSPA/Dockerfile
+++ b/WebSPA/Dockerfile
@@ -1,20 +1,52 @@
-FROM microsoft/aspnetcore:2.0 AS base
-WORKDIR /app
-EXPOSE 80
+#FROM microsoft/aspnetcore:2.0 AS base
+#WORKDIR /app
+#EXPOSE 80
+#
+#FROM microsoft/aspnetcore-build:2.0 AS build
+#WORKDIR /src
+#COPY *.sln ./
+#COPY WebSPA/WebSPA.csproj WebSPA/
+#RUN dotnet restore
+#COPY . .
+#WORKDIR /src/WebSPA
+#RUN dotnet build -c Release -o /app
+#
+#FROM build AS publish
+#RUN dotnet publish -c Release -o /app
+#
+#FROM base AS final
+#WORKDIR /app
+#COPY --from=publish /app .
+#ENTRYPOINT ["dotnet", "WebSPA.dll"]
+#
 
-FROM microsoft/aspnetcore-build:2.0 AS build
-WORKDIR /src
-COPY *.sln ./
-COPY WebSPA/WebSPA.csproj WebSPA/
-RUN dotnet restore
+FROM node:8.9-alpine as builder
+
+# --------------------------------------
+# Install npm packages
+# --------------------------------------
+
+WORKDIR /app
+RUN npm i -g @angular/cli
+COPY package.json package.json
+RUN npm install --silent
+
 COPY . .
-WORKDIR /src/WebSPA
-RUN dotnet build -c Release -o /app
 
-FROM build AS publish
-RUN dotnet publish -c Release -o /app
+# --------------------------------------
+# Build PROD & BETA
+# --------------------------------------
+RUN ng build --prod --build-optimizer
 
-FROM base AS final
+# --------------------------------------
+# Create final image
+# --------------------------------------
+FROM nginx:1.13.1
+
 WORKDIR /app
-COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "WebSPA.dll"]
+COPY --from=builder /app/dist .
+
+RUN  rm -rf /usr/share/nginx/html/* && \
+	 cp -R /app/* /usr/share/nginx/html/  
+
+COPY Docker.nginx.default.conf /etc/nginx/conf.d/default.conf
