--- a/WebSPA/Dockerfile
+++ b/WebSPA/Dockerfile
@@ -28,7 +28,7 @@ FROM node:8.9-alpine as builder
 
 WORKDIR /app
 RUN npm i -g @angular/cli
-COPY WebSPA/package.json ./package.json
+COPY WebSPA/package.json package.json
 RUN npm install 
 
 COPY WebSPA .
@@ -47,6 +47,6 @@ WORKDIR /app
 COPY --from=builder /app/dist .
 
 RUN  rm -rf /usr/share/nginx/html/* && \
-	 cp -R /app/src/* /usr/share/nginx/html/  
+	 cp -R /app/* /usr/share/nginx/html/  
 
 COPY WebSPA/Docker.nginx.default.conf /etc/nginx/conf.d/default.conf
