--- a/src/Services/ContactService/ContactService.API/Dockerfile
+++ b/src/Services/ContactService/ContactService.API/Dockerfile
@@ -7,6 +7,9 @@ WORKDIR /src
 COPY *.sln ./
 COPY src/Services/ContactService/ContactService.API/ContactService.API.csproj ContactService.API/
 COPY src/BuildingBlocks/WebHost/WebHost.Customization/WebHost.Customization.csproj src/BuildingBlocks/WebHost/WebHost.Customization/
+COPY src/BuildingBlocks/HealthChecks/src/Microsoft.AspNetCore.HealthChecks/Microsoft.AspNetCore.HealthChecks.csproj src/BuildingBlocks/HealthChecks/src/Microsoft.AspNetCore.HealthChecks/
+COPY src/BuildingBlocks/HealthChecks/src/Microsoft.Extensions.HealthChecks/Microsoft.Extensions.HealthChecks.csproj src/BuildingBlocks/HealthChecks/src/Microsoft.Extensions.HealthChecks/
+COPY src/BuildingBlocks/HealthChecks/src/Microsoft.Extensions.HealthChecks.SqlServer/Microsoft.Extensions.HealthChecks.SqlServer.csproj src/BuildingBlocks/HealthChecks/src/Microsoft.Extensions.HealthChecks.SqlServer/
 RUN dotnet restore
 COPY . .
 WORKDIR /src/src/Services/ContactService/ContactService.API
