--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,18 +14,18 @@ services:
   sql.data:
     image: microsoft/mssql-server-linux:2017-latest
     environment:
-      SA_PASSWORD: "Qweasd123@"
+      SA_PASSWORD: "Qweasd123"
       ACCEPT_EULA: "Y"
     ports:
-      - "5433:1433"
+      - "5434:1433"
 
   #webspa:
   #  image: contactbook/webspa:${TAG:-latest}
-  #  build:
-  #   context: .
-  #   dockerfile: WebSPA/Dockerfile
+  # build:
+  #  context: .
+  #  dockerfile: WebSPA/Dockerfile
   #  ports:
-  #   - "5102:80"
+  #  - "5102:80"
 
   #orderservice.api:
   #  image: contactbook/orderservice.api:${TAG:-latest}
