--- a/src/Services/ContactService/ContactService.API/appsettings.json
+++ b/src/Services/ContactService/ContactService.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
-  //"ConnectionString": "Server=tcp:127.0.0.1,5433;Initial Catalog=Services.ContactsDb;User Id=sa;Password=Qweasd123@",
-  "ConnectionString": "Server=tcp:10.0.75.1,5433;Initial Catalog=Services.ContactsDb;User Id=sa;Password=Qweasd123@",
+  //"ConnectionString": "Server=tcp:127.0.0.1,5434;Initial Catalog=ContactsDb;User Id=sa;Password=Qweasd123",
+  "ConnectionString": "Server=tcp:10.0.75.1,5434;Initial Catalog=ContactsDb;User Id=sa;Password=Qweasd123",
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
