--- a/src/Services/OrderService/OrderService.API/OrderService.API.csproj
+++ b/src/Services/OrderService/OrderService.API/OrderService.API.csproj
@@ -34,4 +34,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\WebHost\WebHost.Customization\WebHost.Customization.csproj" />
+  </ItemGroup>
+
 </Project>
