--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   contactservice.api:
     environment:
-     - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Development
     ports:
       - "5103:80"
 
@@ -16,13 +16,12 @@ services:
 
   #webspa:
   #  environment:
-  #  - ASPNETCORE_ENVIRONMENT=Development
+  #   - ASPNETCORE_ENVIRONMENT=Development
   #  ports:
   #   - "5102:80"
 
-  #orderservice.api:
-  #  environment:
-  #    - ASPNETCORE_ENVIRONMENT=Development
-  #  ports:
-  #   - "5104:80"
-
+  orderservice.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "5104:80"
