--- a/src/Services/OrderService/OrderService.API/appsettings.json
+++ b/src/Services/OrderService/OrderService.API/appsettings.json
@@ -1,4 +1,6 @@
 ﻿{
+  //"ConnectionString": "Server=KASUNG-LAP\\SQLEXPRESS;Initial Catalog=OrdersDb;;Integrated Security=True",
+  "ConnectionString": "Server=tcp:10.0.75.1,5434;Initial Catalog=OrdersDb;User Id=sa;Password=Qweasd123",
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
