--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,12 +7,12 @@ services:
     ports:
       - "5103:80"
 
-  sql.data:
-    environment:
-      - SA_PASSWORD=Qweasd123
-      - ACCEPT_EULA=Y
-    ports:
-      - "5434:1433"
+  #sql.data:
+  #  environment:
+  #    - SA_PASSWORD=Qweasd123
+  #   - ACCEPT_EULA=Y
+  #  ports:
+  #    - "5434:1433"
 
   #webspa:
   #  environment:
