--- a/WebSPA/package.json
+++ b/WebSPA/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "angular-material": "^1.1.7",
+    "angular2-uuid": "^1.1.1",
+    "angular4-material-table": "^0.2.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "ngx-chips": "^1.6.7",
