--- a/WebSPA/package.json
+++ b/WebSPA/package.json
@@ -28,6 +28,7 @@
     "angular4-material-table": "^0.2.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "moment": "^2.22.0",
     "ngx-chips": "^1.6.7",
     "ngx-toastr": "^8.3.0",
     "rxjs": "^5.5.6",
