--- a/WebSPA/package.json
+++ b/WebSPA/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.22.0",
     "ngx-chips": "^1.6.7",
     "ngx-toastr": "^8.3.0",
+    "npm": "^5.8.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
