--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -25,3 +25,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
       - "5104:80"
+
+  rabbitmq:
+    ports:
+      - "15672:15672"
+      - "5672:5672"
