--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,7 +12,7 @@ services:
   #    - SA_PASSWORD=Qweasd123
   #    - ACCEPT_EULA=Y
   #  ports:
-  #    - "5434:1433"
+  #    - "5433:1433"
 
   #webspa:
   #  environment:
@@ -26,7 +26,7 @@ services:
     ports:
       - "5104:80"
 
-  rabbitmq:
-    ports:
-      - "15672:15672"
-      - "5672:5672"
+  #rabbitmq:
+  #  ports:
+  #    - "15672:15672"
+  #    - "5672:5672"
