--- a/src/Services/OrderService/OrderService.API/appsettings.json
+++ b/src/Services/OrderService/OrderService.API/appsettings.json
@@ -1,6 +1,12 @@
 ﻿{
   //"ConnectionString": "Server=KASUNG-LAP\\SQLEXPRESS;Initial Catalog=OrdersDb;;Integrated Security=True",
   "ConnectionString": "Server=tcp:10.0.75.1,5433;Initial Catalog=OrdersDb;User Id=sa;Password=Qweasd123",
+  "MqSettings": {
+    "ExchangeName": "OrderExch",
+    "ExchangeType": "direct",
+    "QueueName": "customer_queue",
+    "RouteKey": "customer_route"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
