--- a/src/Services/ContactService/ContactService.API/appsettings.json
+++ b/src/Services/ContactService/ContactService.API/appsettings.json
@@ -1,6 +1,12 @@
 ﻿{
   //"ConnectionString": "Server=tcp:127.0.0.1,5433;Initial Catalog=ContactsDb;User Id=sa;Password=Qweasd123",
   "ConnectionString": "Server=tcp:10.0.75.1,5433;Initial Catalog=ContactsDb;User Id=sa;Password=Qweasd123",
+  "MqSettings": {
+    "ExchangeName": "OrderExch",
+    "ExchangeType": "direct",
+    "QueueName": "customer_queue",
+    "RouteKey": "customer_route"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
