--- a/Kubernetes/contactserviceapi-deployment.yaml
+++ b/Kubernetes/contactserviceapi-deployment.yaml
@@ -7,8 +7,8 @@ metadata:
     kompose.version: 1.11.0 (39ad614)
   creationTimestamp: null
   labels:
-    io.kompose.service: webspa
-  name: webspa
+    io.kompose.service: contactserviceapi
+  name: contactserviceapi
 spec:
   replicas: 1
   strategy: {}
@@ -16,11 +16,14 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: webspa
+        io.kompose.service: contactserviceapi
     spec:
       containers:
-      - image: kasungunathilaka/webspa:dev
-        name: webspa
+      - env:
+        - name: ConnectionString
+          value: "Server=tcp:172.20.3.94,31433;Initial Catalog=ContactsDb;User Id=sa;Password=Qweasd123"
+        image: kasungunathilaka/contactserviceapi:dev
+        name: contactserviceapi
         ports:
         - containerPort: 80
         resources: {}
