--- a/Kubernetes/orderserviceapi-deployment.yaml
+++ b/Kubernetes/orderserviceapi-deployment.yaml
@@ -7,8 +7,8 @@ metadata:
     kompose.version: 1.11.0 (39ad614)
   creationTimestamp: null
   labels:
-    io.kompose.service: contactserviceapi
-  name: contactserviceapi
+    io.kompose.service: orderserviceapi
+  name: orderserviceapi
 spec:
   replicas: 1
   strategy: {}
@@ -16,14 +16,14 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: contactserviceapi
+        io.kompose.service: orderserviceapi
     spec:
       containers:
       - env:
         - name: ConnectionString
-          value: "Server=tcp:172.20.3.85,31433;Initial Catalog=ContactsDb;User Id=sa;Password=Qweasd123"
-        image: kasungunathilaka/contactserviceapi:dev
-        name: contactserviceapi
+          value: "Server=tcp:172.20.3.94,31433;Initial Catalog=OrdersDb;User Id=sa;Password=Qweasd123"
+        image: kasungunathilaka/orderserviceapi:dev
+        name: orderserviceapi
         ports:
         - containerPort: 80
         resources: {}
