--- a/Kubernetes/orderserviceapi-service.yaml
+++ b/Kubernetes/orderserviceapi-service.yaml
@@ -7,14 +7,14 @@ metadata:
     kompose.version: 1.11.0 (39ad614)
   creationTimestamp: null
   labels:
-    io.kompose.service: contactserviceapi
-  name: contactserviceapi
+    io.kompose.service: orderserviceapi
+  name: orderserviceapi
 spec:
+  type: NodePort
   ports:
-  - name: "5103"
-    port: 5103
-    targetPort: 80
+  - port: 80
+    nodePort: 32104
   selector:
-    io.kompose.service: contactserviceapi
+    io.kompose.service: orderserviceapi
 status:
   loadBalancer: {}
