--- a/Kubernetes/rabbitmq-service.yaml
+++ b/Kubernetes/rabbitmq-service.yaml
@@ -10,10 +10,12 @@ metadata:
     io.kompose.service: rabbitmq
   name: rabbitmq
 spec:
+  type: NodePort
   ports:
   - name: "15672"
     port: 15672
     targetPort: 15672
+    nodePort: 32672
   - name: "5671"
     port: 5671
     targetPort: 5671
