--- a/WebSPA/config.json
+++ b/WebSPA/config.json
@@ -1,4 +1,4 @@
 {
-  "contacts_host_port": "172.20.3.94:32103",
-  "orders_host_port": "172.20.3.94:32104"
+  "contacts_host_port": "localhost:5103",
+  "orders_host_port": "localhost:5104"
 }
