--- a/react-spa/package.json
+++ b/react-spa/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.43",
+    "autosuggest-highlight": "^3.1.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
     "material-ui": "^1.0.0-beta.43",
     "react": "^16.3.2",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
